--- a/src/pages/Intro.css
+++ b/src/pages/Intro.css
@@ -7,19 +7,14 @@
     background-size: cover;
     border: 3px solid #2d2e32;
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    height: 50vh;
+    height: 45vh;
     position: relative;
     transition: all 1s ease-in-out;
     /* width: 20vh; */
     /* background-position: center; */
 }
-@media (min-width: 576px) {
-    h1 {
-  text-align: center; /* Small screens */
-    }
-  }
-h1{
-    font-size: 70px !important;
+.h1{
+    font-size: 65px !important;
     font-weight: bold !important;
 }
 .bi{
